# freshrss-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  freshrss_mcp_server_prompt.md  pyproject.toml
.beads/: issues.jsonl  last-touched
freshrss-mcp-server/: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  flake.nix  pyproject.toml
freshrss-mcp-server/examples/: client_example.py  nixos-configuration.nix
freshrss-mcp-server/src/freshrss_mcp_server/: __init__.py  __main__.py  config.py  freshrss_client.py  models.py  server.py
freshrss-mcp-server/tests/: test_freshrss_client.py  test_models.py
src/freshrss_mcp/: client.py  config.py  models.py  server.py  tools.py
tests/: test_client.py  test_config.py  test_tools.py
